# tiny-render

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: build-and-publish.yml  main.yml  python-package.yml  tests.yml
src/tiny_render/: __init__.py  render.py
tests/: test_tiny_render.py
tiny_render/: __init__.py  cli.py  render.py
