[tool.poetry]
name = "tiny-render"
version = "0.1.0"
description = "A simple wrapper of Jinja2 to render text based file, eg. SQL code and YAML files"
authors = ["Zhong Dai <zhongdai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
