[tool.poetry]
name = "tiny-render"
version = "0.1.2"
description = "A simple wrapper of Jinja2 to render text based file, eg. SQL code and YAML files"
authors = ["Zhong Dai <zhongdai.au@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
